2020-01-14 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macros:

          * gtk_dialog_set_has_separator (When Gtk>2)
          * geda_toggle_button_set_active (Gtk 2 & 3)

    * src/dialogs/geda_file_chooser.c: Include geda_gtk_compat.h.

    * src/dialogs/geda_image_chooser.c: Include geda_gtk_compat.h, utilize
      geda_get_widget_allocation in chooser_adjust_size.

2020-01-13 Wiley E. Hill <wileyhill@gmail.com>

    * include/: Reluctantly include all gtk.h:

          * include/geda_bulb.h
          * include/geda_menu_item.h
          * include/geda_toggle_action.h
          * include/geda_tree.h
          * include/geda_tree_view.h

    * include/geda_gtk_compat.h: Revise Conditional directive to use Gtk+-3 macros
      if GSEAL_ENABLE is defined, add macros:

          * gtk_dialog_get_action_area (When Gtk<3)
          * geda_get_accel_group_is_locked (Gtk 2 & 3)
          * geda_toggle_button_get_active (Gtk 2 & 3)

2020-01-10 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macros geda_get_focus_widget.

    * src/functions/geda_container.c: Revise get_allocation_coords to utilize
      gtk_widget_get_allocation. Revise function find_old_focus to utilize
      accessor gtk_container_get_focus_child and eliminate use of goto. Revise
      old_focus_coords to verify the toplevel has focus, otherwise focus_widget
      is not valid, and utilize geda_get_focus_widget.

2020-01-09 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_button.c: Convert plain source documentation to Doxygen
      documentation for properties:

          * "default-outside-border"
          * "inner-border"

    * src/widgets/geda_menu_item.c: Reorganizing geda_menu_item_class_init;
      replocate properties before signals. Update existing property documentation
      format.

    * src/widgets/geda_option_menu.c: Add property documentation:

          * "indicator-size"
          * "indicator-spacing"
